--- a/simulation/index.html
+++ b/simulation/index.html
@@ -1,13 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js WebSocket Example</title>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.js"></script>
-  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-  <script src="sketch.js" defer></script>
+    <meta charset="UTF-8">
+    <title>Elevator Simulator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.3/addons/p5.sound.js" integrity="sha512-TU9AWtV5uUZPX8dbBAH8NQF1tSdigPRRT82vllAQ1Ke28puiqLA6ZVKxtUGlgrH6yWFnkKy+sE6luNEGH9ar0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="sketch.js"></script>
+    <style type="text/css">
+        body {
+            width: 100%;
+            font-family: sans-serif;
+        }
+
+        .label, .hud-text {
+            font-size: 70%;
+            color: black;
+            margin-right: 1em;
+        }
+
+        #main {
+            width: 1000px;
+        }
+
+        .hud-text {
+            vertical-align: middle;
+        }
+        input, select {
+            font-size: 70%;
+        }
+        td {
+            vertical-align: top;
+        }
+        #paymentsChart {
+            height: 15px;
+        }
+        #nomodules {
+            display: none;
+        }
+        #controls {
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+    </style>
 </head>
 <body>
+<body>
+<div id="nomodules">
+    <p>This application uses “ES Modules”, which apparently are not supported or enabled in your browser.</p>
+    <a href="https://jakearchibald.com/2017/es-modules-in-browsers/">More information</a>
+</div>
+<script nomodule>
+    document.getElementById('nomodules').style.display = 'block';
+</script>
+<div class="container-fluid">
+    <p><b>Elevator Simulator</b>
+        <span style="font-size: 70%">By <a href="https://davebsoft.com">Dave Briccetti</a><a style="margin-left: 1em" href="https://github.com/dcbriccetti/elevator-sim">Source code</a><a style="margin-left: 1em" href="https://youtu.be/Ph4IhXUZy20">Code explanation video</a></span></p>
+    <div class='row'>
+        <div class='col-3'>
+            <div id='controls'>
+                <table>
+                    <tr>
+                        <td><label for="score" class="label">Score</label></td>
+                        <td id="score"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="waiting" class="label">Waiting</label></td>
+                        <td id="waiting" class='hud-text'></td>
+                    </tr>
+                    <tr>
+                        <td><label for="riding" class="label">Riding</label></td>
+                        <td id="riding" class='hud-text'></td>
+                    </tr>
+                    <tr>
+                        <td><label for="served" class="label">Served</label></td>
+                        <td id="served" class='hud-text'></td>
+                    </tr>
+                    <tr>
+                        <td><label for="payments" class="label">Payments</label></td>
+                        <td id="payments" class='hud-text'></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" id="paymentsChart"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="costs" class="label">Costs</label></td>
+                        <td id="costs" class='hud-text'></td>
+                    </tr>
+                    <tr>
+                        <td><label for="profit" class="label">Profit</label></td>
+                        <td id="profit" class='hud-text'></td>
+                    </tr>
+                    <tr>
+                        <td><label for="numActiveCars" class="label">Active Cars</label></td>
+                        <td><input id="numActiveCars" type="range" min="0" max="8" step="1"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="elevSpeed" class="label">Car Speed</label></td>
+                        <td><input id="elevSpeed" type="range" min="1" max="10" step="1"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="projection" class="label">Projection</label></td>
+                        <td id="projectionParent"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="controlMode" class="label">Control Mode</label></td>
+                        <td id="controlModeParent"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="view" class="label">View</label></td>
+                        <td id="viewParent"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="passengerLoad" class="label">Load</label></td>
+                        <td id="passengerLoadParent"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="volume" class="label">Volume</label></td>
+                        <td><input id="volume" type="range" min="0" max="10" step="1"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="speakers" class="label">Speakers</label></td>
+                        <td id="speakersParent"></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class='col' id='main'></div>
+    </div>
+</div>
 </body>
 </html>
