Changes to backend

--- a/backend/public/elevator.html
+++ b/backend/public/elevator.html
@@ -126,7 +126,7 @@
                 </table>
             </div>
         </div>
-        <div class='col' id='main'></div>
+        <div class='col' id='main'>Hellow</div>
     </div>
 </div>
 </body>
