--- a/public/oauth.html
+++ b/public/oauth.html
@@ -1,19 +1,75 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Cloud Oauth</title>
-    <script src="oauth.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <style type="text/css"></style>
-  </head>
-  <body>
-    <div>
-      <h1>List of systems</h1>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Centered Heading with Component</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <script src="oauth.js"></script> -->
+  <script>
+    function login() {
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = "oauth.js";
+      document.getElementsByTagName("head")[0].appendChild(script);
+    }
+  </script>
+
+  <style>
+    body,
+    html {
+      height: 100%;
+      margin: 0;
+      background-color: rgb(255, 255, 255); 
+      padding: 0;
+    }
+
+    a {
+      align-items: center;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+
+    .heading {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    #systems {
+      text-align: center;
+      align-items: center;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="container">
+    <h1 class="heading"><b>Welcome to Elevator System</b></h1>
+    <div class="card" style="width: 50rem;">
+      <div class="card-body">
+        <div id="login">Please login to view available Nx systems</div>
+        <button type="button" id="login-btn" class="btn btn-primary mt-3 mb-3" onclick="login()">Login
+      </div>
+      <div id="meta" class="pl-3"></div>
       <div id="systems"></div>
+      <div id="data" class="pl-3"></div>
+      <div class="d-flex justify-content-center" id="continue">
+      </div>
     </div>
-    <div id="data"></div>
-    
-    </script>
-  </body>
+  </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
 </html>
