--- a/public/oauth.html
+++ b/public/oauth.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Centered Heading with Component</title>
+  <title>Contactless Elevator</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <!-- <script src="oauth.js"></script> -->
   <script>
     function login() {
       var script = document.createElement("script");
