--- a/public/oauth.html
+++ b/public/oauth.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,44 +13,70 @@
       document.getElementsByTagName("head")[0].appendChild(script);
     }
   </script>
-
   <style>
-    body,
     html {
       height: 100%;
+    }
+
+    body {
       margin: 0;
-      background-color: rgb(255, 255, 255); 
-      padding: 0;
     }
 
-    a {
-      align-items: center;
+    .bg {
+      animation: slide 3s ease-in-out infinite alternate;
+      background-image: linear-gradient(-60deg, rgb(57, 0, 104) 50%, rgb(62, 0, 179) 50%);
+      bottom: 0;
+      left: -50%;
+      opacity: 0.5;
+      position: fixed;
+      right: -50%;
+      top: 0;
+      z-index: -1;
     }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
+    .bg2 {
+      animation-direction: alternate-reverse;
+      animation-duration: 4s;
     }
 
-    .heading {
+    .bg3 {
+      animation-duration: 5s;
+    }
+
+    .content {
+      background-color: rgba(255, 255, 255, 0.8);
+      border-radius: 0.25em;
+      box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
+      box-sizing: border-box;
+      left: 50%;
+      padding: 10vmin;
+      position: fixed;
       text-align: center;
-      margin-bottom: 20px;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
 
-    #systems {
-      text-align: center;
-      align-items: center;
+    h1 {
+      font-family: monospace;
+    }
+
+    @keyframes slide {
+      0% {
+        transform: translateX(-25%);
+      }
+      100% {
+        transform: translateX(25%);
+      }
     }
   </style>
 </head>
-
 <body>
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
 
-  <div class="container">
-    <h1 class="heading"><b>Welcome to Elevator System</b></h1>
+  <div class="content">
+    <h1>Welcome to Elevator System</h1>
     <div class="card" style="width: 50rem;">
       <div class="card-body">
         <div id="login">Please login to view available Nx systems</div>
@@ -60,15 +85,12 @@
       <div id="meta" class="pl-3"></div>
       <div id="systems"></div>
       <div id="data" class="pl-3"></div>
-      <div class="d-flex justify-content-center" id="continue">
-      </div>
+      <div class="d-flex justify-content-center" id="continue"></div>
     </div>
-  </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-
 </html>
