--- a/public/not-found.html
+++ b/public/not-found.html
@@ -50,7 +50,7 @@
   <div class="container">
     <h1>404</h1>
     <p>Oops! The page you're looking for could not be found.</p>
-    <p>Go back to <a href="/">home</a>.</p>
+    <p>Go back to <a href="/login">home</a>.</p>
   </div>
 </body>
 </html>
