--- a/public/navigation.html
+++ b/public/navigation.html
@@ -35,8 +35,8 @@
 
     var username = "local";
     var password = "vymo2024";
-    var camera2Id = "4e9524ad-76a3-a4ca-4977-49a973ac563a";
-    var cameraId = "96610278-32b5-bbd7-65e3-b83ab9d0a656";
+    var cameraId = "4e9524ad-76a3-a4ca-4977-49a973ac563a";
+    var camera2Id = "96610278-32b5-bbd7-65e3-b83ab9d0a656";
     var serverLocalAddress = "https://localhost:7001";
     var serverAddress = serverLocalAddress;
 
@@ -145,11 +145,73 @@
       width: 45%; /* Adjust the width as needed */
       margin-right: 10px; /* Adjust the margin as needed */
     }
+
+    html {
+        height: 100%;
+      }
+
+      body {
+        margin: 0;
+      }
+
+      .bg {
+        animation: slide 3s ease-in-out infinite alternate;
+        background-image: linear-gradient(
+          -60deg,
+          rgb(67, 0, 80) 50%,
+          rgb(14, 2, 196) 50%
+        );
+        bottom: 0;
+        left: -50%;
+        opacity: 0.5;
+        position: fixed;
+        right: -50%;
+        top: 0;
+        z-index: -1;
+      }
+
+      .bg2 {
+        animation-direction: alternate-reverse;
+        animation-duration: 4s;
+      }
+
+      .bg3 {
+        animation-duration: 5s;
+      }
+
+      .content {
+        background-color: rgba(255, 255, 255, 0.808);
+        border-radius: 0.25em;
+        box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
+        box-sizing: border-box;
+        left: 50%;
+        padding: 10vmin;
+        position: fixed;
+        text-align: center;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      h1 {
+        font-family: monospace;
+      }
+
+      @keyframes slide {
+        0% {
+          transform: translateX(-25%);
+        }
+        100% {
+          transform: translateX(25%);
+        }
+      }
   </style>
 </head>
 
 <body>
-  <div class="container">
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+  <div class="content">
     <h2 class="mt-5 mb-3">Elevator System Management</h2>
     <ul class="nav nav-tabs" role="tablist">
       <li class="nav-item">
